# ccmux-telegram

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: restart.sh
src/ccmux_telegram/: __init__.py  _queue_content.py  _queue_status.py  _queue_worker.py  auto_unbind.py  bash_capture.py  binding_callbacks.py  binding_flow.py  binding_health.py  binding_lifecycle.py  binding_steal.py  bot.py  callback_data.py  claude_trust.py  command_basic.py  command_history.py  config.py  main.py  markdown.py  message_dispatch.py  message_in.py  message_out.py  message_queue.py  picker.py  prompt.py  prompt_state.py  relay_tag.py  runtime.py  sender.py  state_cache.py  (+9 more)
tests/: conftest.py  fake_backend.py  test_api_boundary.py  test_auq_lifecycle.py  test_auto_unbind.py  test_binding_flow_rename.py  test_binding_health.py  test_binding_health_loop.py  test_bindings.py  test_claude_trust.py  test_command_start.py  test_config.py  test_integration_persistence.py  test_markdown.py  test_message_dispatch.py  test_message_in_skill_filter.py  test_message_in_user_filter.py  test_message_out.py  test_message_queue.py  test_permission_callback.py  test_prompt.py  test_prompt_context_injection.py  test_queue_coalesce.py  test_rebind_messaging.py  test_rebind_window.py  test_relay_tag.py  test_response.py  test_sender.py  test_startup_reconcile.py  test_state_cache.py  test_status_monitor.py  test_status_render.py  test_tool_context.py  test_topic_rename.py  test_transcribe.py  test_util.py  test_watcher.py
(+4 files in other folders)
